# simpleFileIndexer

./: .gitignore  README.md  README.rst  TODO  docker-compose.yml
docker/: Dockerfile
include/: fileIndexer.h  logger.h
src/: CMakeLists.txt  fileIndexer.cpp  logger.cpp  main.cpp
src/tests/: CMakeLists.txt  test_index.cpp  test_logger.cpp
